--- a/trunk/u_turismu/design/report/report-uturismu.tex
+++ b/trunk/u_turismu/design/report/report-uturismu.tex
@@ -34,4 +34,8 @@
     utilizzato Hibernate\footnote{\texttt{www.hibernate.org}}, mentre il livello di \textit{business logic} e quello di 
     \textit{presentation} sono stati gestiti mediante l'ausilio di Spring\footnote{\texttt{www.springsource.org}}.
     
+  \chapter{Casi d'uso}
+    \section{Glossario dei termini}
+      Un utente generico può
+    
 \end{document}
